# infinitary-combinatorics

./: README.md  infinitary-combinatorics.cabal
src/: Infinitary.hs
