name:                infinitary-combinatorics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidcoates/infinitary-combinatorics#readme
license:             GPL3
license-file:        LICENSE
author:              David Coates
maintainer:          davidcoates95@gmail.com
copyright:           2017 David Coates
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Infinitary
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidcoates/infinitary-combinatorics
